# win_shmem_multi_window

./: .gitignore  CHANGELOG.md  CLAUDE.md  OFFICIAL_MULTIWINDOW_API_RESEARCH.md  README.md  SHARED_MEMORY_COUNTER_GUIDE.md  TEST_IMPLEMENTATION_STATUS.md  pubspec.yaml
.claude/: .template-source  CLAUDE.md  CPP_STYLE_GUIDE_SUMMARY.md  cpp-style-guide.md  cpp-testing-guide.md  flutter-dart-rules.md  flutter-tdd-guide.md  project-structure.md  tdd-template.md  version-control.md
.claude/commands/: tdd-implement.md  tdd-new.md  tdd-test.md
.claude/tdd-tasks/: add-ui-buttons-for-programmatic-window-creation-and-destruction.md  diagnose-shared-memory-cross-process-issue.md  fix-window-close-decrement.md  implement-dartportmanager.md  implement-sharedmemorymanager.md  implement-windowcountlistener.md  orphan-window-detection-cleanup.md  refactor-flutter-integration-for-testability.md
.claude/templates/: feature-notes.md
integration_test/: app_integration_test.dart  ffi_window_count_service_test.dart  multi_window_sync_test.dart
lib/: main.dart  window_manager_ffi.dart
lib/services/: ffi_window_count_service.dart  mock_window_count_service.dart  window_count_service.dart
lib/widgets/: window_counter_widget.dart
notes/features/: add-ui-buttons-for-programmatic-window-creation-and-destruction.md  implement-dartportmanager.md  implement-sharedmemorymanager.md  implement-windowcountlistener.md
test/services/: mock_window_count_service_test.dart  window_count_service_test.dart
test/widget/: window_controls_test.dart
test/widgets/: window_counter_widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  dart_port_manager.cpp  dart_port_manager.h  flutter_window.cpp  flutter_window.h  main.cpp  shared_memory_manager.cpp  shared_memory_manager.h  window_count_listener.cpp  window_count_listener.h
windows/test/: CMakeLists.txt  README.md  cross_process_test.cpp  dart_api_dl.h  dart_port_manager_test.cpp  mock_dart_api_dl.h  shared_memory_manager_test.cpp  standalone_shmem_test.cpp  window_close_test.cpp  window_count_listener_test.cpp
windows/test/standalone_build/: CMakeLists.txt
